Font awesome edits

--- a/css/main.css
+++ b/css/main.css
@@ -223,12 +223,12 @@ span {
   color: white;
 }
 
-.about i {
+/*.about i {
   color: white;
   font-size: 20px;
   padding-right: 8px;
   vertical-align: middle;
-}
+}*/
 
 /*.footer {
   background: #2f2f2f;
